...
                        android:layout_margin="@dimen/linearlayout_activity_system_config_export_margin"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textview_activity_system_config_export_folder"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:textColor="@drawable/edittext_selector"
                            android:text="" />

...
                        android:layout_margin="@dimen/linearlayout_activity_system_config_import_margin"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textview_activity_system_config_import_folder"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:textColor="@drawable/edittext_selector"
                            android:text="" />

...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/label_activity_system_external_storage_type" />

                    <RadioGroup
                        android:id="@+id/radiogroup_activity_system_external_storage_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radiobutton_activity_system_external_storage_type_primary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_activity_system_external_storage_type_primary" />

                        <RadioButton
                            android:id="@+id/radiobutton_activity_system_external_storage_type_sdcard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_activity_system_external_storage_type_sdcard" />

                    </RadioGroup>

...
                        android:layout_margin="@dimen/linearlayout_activity_system_allow_arbitrary_file_location_margin"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:orientation="horizontal">

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switch_activity_system_allow_arbitrary_file_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:trackTint="@drawable/switchtrack_selector"
                            app:thumbTint="@drawable/switchthumb_selector"
                            android:showText="false" />

                        <TextView
                            android:id="@+id/textview_activity_system_allow_arbitrary_file_location_on_off"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="" />

                    </LinearLayout>
...
