...
            android:layout_marginTop="@dimen/linearlayout_dialog_export_encrypt_encrypt_margin_top"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_dialog_export_encrypt_encrypt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:buttonTint="@drawable/checkbox_selector"
                android:text="@string/label_dialog_export_encrypt_encrypt"
                android:textColor="@color/textColor"
                android:checked="true" />
...
                android:id="@+id/edittext_dialog_export_encrypt_password"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/edittext_dialog_export_encrypt_password_padding_end"
                android:drawablePadding="@dimen/edittext_dialog_export_encrypt_password_drawable_padding"
                android:importantForAutofill="no"
                android:longClickable="false"
                android:textIsSelectable="false"
                android:inputType="textPassword|textNoSuggestions"
                android:hint="@string/label_dialog_export_encrypt_password"
                android:textColorHint="@color/textColorHint"
                android:drawableTint="@color/textColorPrimary"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/linearlayout_dialog_export_encrypt_ok_cancel_padding_top"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageview_dialog_export_encrypt_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_export_encrypt_ok"
...
