/*
 * Copyright (c) 2026 Alwin Ibba
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package net.ibbaa.keepitup.ui;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.scrollTo;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isEnabled;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.CoreMatchers.not;
import static org.hamcrest.Matchers.endsWith;
import static org.junit.Assert.assertEquals;
import static org.junit.Assert.assertFalse;
import static org.junit.Assert.assertTrue;

import androidx.documentfile.provider.DocumentFile;
import androidx.test.core.app.ActivityScenario;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.filters.MediumTest;

import net.ibbaa.keepitup.R;
import net.ibbaa.keepitup.model.AccessType;
import net.ibbaa.keepitup.model.AccessTypeData;
import net.ibbaa.keepitup.model.EncryptionInfo;
import net.ibbaa.keepitup.model.Interval;
import net.ibbaa.keepitup.model.LogEntry;
import net.ibbaa.keepitup.model.NetworkTask;
import net.ibbaa.keepitup.model.NotificationType;
import net.ibbaa.keepitup.model.SNMPAuthAlgorithm;
import net.ibbaa.keepitup.model.SNMPPrivAlgorithm;
import net.ibbaa.keepitup.model.SNMPTransport;
import net.ibbaa.keepitup.model.SNMPVersion;
import net.ibbaa.keepitup.model.Time;
import net.ibbaa.keepitup.resources.JSONSystemSetup;
import net.ibbaa.keepitup.resources.SystemSetupResult;
import net.ibbaa.keepitup.test.mock.DelegatingTestPermissionLauncher;
import net.ibbaa.keepitup.test.mock.MockDocumentManager;
import net.ibbaa.keepitup.test.mock.MockExportTask;
import net.ibbaa.keepitup.test.mock.MockImportTask;
import net.ibbaa.keepitup.test.mock.MockStoragePermissionManager;
import net.ibbaa.keepitup.test.mock.TestExportTask;
import net.ibbaa.keepitup.test.mock.TestImportTask;
import net.ibbaa.keepitup.test.mock.TestRegistry;
import net.ibbaa.keepitup.ui.sync.ExportTask;
import net.ibbaa.keepitup.ui.sync.ImportTask;
import net.ibbaa.keepitup.util.StreamUtil;

import org.junit.Before;
import org.junit.Test;
import org.junit.runner.RunWith;

import java.io.File;
import java.io.FileInputStream;
import java.io.FileOutputStream;
import java.nio.charset.StandardCharsets;
import java.util.List;

@MediumTest
@SuppressWarnings({"SameParameterValue", "SequencedCollectionMethodCanBeUsed"})
@RunWith(AndroidJUnit4.class)
public class SAFSystemActivityMockTest extends BaseUITest {

    private MockStoragePermissionManager storagePermissionManager;

    @Before
    public void beforeEachTestMethod() {
        super.beforeEachTestMethod();
        storagePermissionManager = getMockStoragePermissionManager();
    }

    @Test
    public void testAllowArbitraryFileLocation() {
        ActivityScenario<?> activityScenario = launchSettingsInputActivity(SystemActivity.class, getBypassSystemSAFBundle());
        injectMocks(activityScenario);
        injectArbitraryFolderLauncher(activityScenario, "/Test");
        storagePermissionManager.setGrantedFolder("/Test");
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(scrollTo());
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(click());
        onView(withId(R.id.textview_activity_system_allow_arbitrary_file_location_on_off)).check(matches(withText("yes")));
        assertTrue(getPreferenceManager().getPreferenceAllowArbitraryFileLocation());
        assertTrue(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Test"));
        assertFalse(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Documents"));
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(scrollTo());
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(click());
        onView(withId(R.id.textview_activity_system_allow_arbitrary_file_location_on_off)).check(matches(withText("no")));
        assertFalse(getPreferenceManager().getPreferenceAllowArbitraryFileLocation());
        assertTrue(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Test"));
        assertFalse(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Documents"));
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(scrollTo());
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(click());
        onView(withId(R.id.textview_activity_system_allow_arbitrary_file_location_on_off)).check(matches(withText("yes")));
        assertTrue(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Test"));
        assertFalse(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Documents"));
        activityScenario.close();
    }

    @Test
    public void testAllowArbitraryFileLocationExternalStorageTypeDisabled() {
        ActivityScenario<?> activityScenario = launchSettingsInputActivity(SystemActivity.class, getBypassSystemSAFBundle());
        injectMocks(activityScenario);
        injectArbitraryFolderLauncher(activityScenario, "/Test");
        storagePermissionManager.setGrantedFolder("/Test");
        onView(withId(R.id.radiogroup_activity_system_external_storage_type)).check(matches(isEnabled()));
        onView(withId(R.id.radiobutton_activity_system_external_storage_type_primary)).check(matches(isEnabled()));
        onView(withId(R.id.radiobutton_activity_system_external_storage_type_sdcard)).check(matches(isEnabled()));
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(scrollTo());
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(click());
        onView(withId(R.id.textview_activity_system_allow_arbitrary_file_location_on_off)).check(matches(withText("yes")));
        onView(withId(R.id.radiogroup_activity_system_external_storage_type)).check(matches(not(isEnabled())));
        onView(withId(R.id.radiobutton_activity_system_external_storage_type_primary)).check(matches(not(isEnabled())));
        onView(withId(R.id.radiobutton_activity_system_external_storage_type_sdcard)).check(matches(not(isEnabled())));
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(scrollTo());
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(click());
        onView(withId(R.id.textview_activity_system_allow_arbitrary_file_location_on_off)).check(matches(withText("no")));
        onView(withId(R.id.radiogroup_activity_system_external_storage_type)).check(matches(isEnabled()));
        onView(withId(R.id.radiobutton_activity_system_external_storage_type_primary)).check(matches(isEnabled()));
        onView(withId(R.id.radiobutton_activity_system_external_storage_type_sdcard)).check(matches(isEnabled()));
        activityScenario.close();
    }

    @Test
    public void testAllowArbitraryFileLocationLogPermissionPresent() {
        ActivityScenario<?> activityScenario = launchSettingsInputActivity(SystemActivity.class, getBypassSystemSAFBundle());
        injectMocks(activityScenario);
        storagePermissionManager.setGrantedFolder("/Movies");
        storagePermissionManager.requestPersistentFolderPermission(null, "/Movies");
        injectArbitraryFolderLauncher(activityScenario, "/Test");
        storagePermissionManager.setGrantedFolder("/Test");
        getPreferenceManager().setPreferenceArbitraryLogFolder("/Movies");
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(scrollTo());
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(click());
        onView(withId(R.id.textview_activity_system_allow_arbitrary_file_location_on_off)).check(matches(withText("yes")));
        assertTrue(getPreferenceManager().getPreferenceAllowArbitraryFileLocation());
        assertFalse(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Movies"));
        assertTrue(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Test"));
        assertFalse(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Documents"));
        assertEquals("/Test", getPreferenceManager().getPreferenceArbitraryLogFolder());
        assertEquals("/Test", getPreferenceManager().getPreferenceArbitraryDownloadFolder());
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(scrollTo());
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(click());
        onView(withId(R.id.textview_activity_system_allow_arbitrary_file_location_on_off)).check(matches(withText("no")));
        assertFalse(getPreferenceManager().getPreferenceAllowArbitraryFileLocation());
        assertFalse(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Movies"));
        assertTrue(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Test"));
        assertFalse(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Documents"));
        assertEquals("/Test", getPreferenceManager().getPreferenceArbitraryLogFolder());
        assertEquals("/Test", getPreferenceManager().getPreferenceArbitraryDownloadFolder());
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(scrollTo());
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(click());
        onView(withId(R.id.textview_activity_system_allow_arbitrary_file_location_on_off)).check(matches(withText("yes")));
        assertTrue(getPreferenceManager().getPreferenceAllowArbitraryFileLocation());
        assertFalse(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Movies"));
        assertTrue(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Test"));
        assertFalse(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Documents"));
        assertEquals("/Test", getPreferenceManager().getPreferenceArbitraryLogFolder());
        assertEquals("/Test", getPreferenceManager().getPreferenceArbitraryDownloadFolder());
        activityScenario.close();
    }

    @Test
    public void testAllowArbitraryFileLocationDownloadPermissionPresent() {
        ActivityScenario<?> activityScenario = launchSettingsInputActivity(SystemActivity.class, getBypassSystemSAFBundle());
        injectMocks(activityScenario);
        storagePermissionManager.setGrantedFolder("/Movies");
        storagePermissionManager.requestPersistentFolderPermission(null, "/Movies");
        injectArbitraryFolderLauncher(activityScenario, "/Test");
        storagePermissionManager.setGrantedFolder("/Test");
        getPreferenceManager().setPreferenceArbitraryDownloadFolder("/Movies");
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(scrollTo());
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(click());
        onView(withId(R.id.textview_activity_system_allow_arbitrary_file_location_on_off)).check(matches(withText("yes")));
        assertTrue(getPreferenceManager().getPreferenceAllowArbitraryFileLocation());
        assertFalse(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Movies"));
        assertTrue(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Test"));
        assertFalse(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Documents"));
        assertEquals("/Test", getPreferenceManager().getPreferenceArbitraryLogFolder());
        assertEquals("/Test", getPreferenceManager().getPreferenceArbitraryDownloadFolder());
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(scrollTo());
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(click());
        onView(withId(R.id.textview_activity_system_allow_arbitrary_file_location_on_off)).check(matches(withText("no")));
        assertFalse(getPreferenceManager().getPreferenceAllowArbitraryFileLocation());
        assertFalse(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Movies"));
        assertTrue(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Test"));
        assertFalse(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Documents"));
        assertEquals("/Test", getPreferenceManager().getPreferenceArbitraryLogFolder());
        assertEquals("/Test", getPreferenceManager().getPreferenceArbitraryDownloadFolder());
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(scrollTo());
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(click());
        onView(withId(R.id.textview_activity_system_allow_arbitrary_file_location_on_off)).check(matches(withText("yes")));
        assertTrue(getPreferenceManager().getPreferenceAllowArbitraryFileLocation());
        assertFalse(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Movies"));
        assertTrue(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Test"));
        assertFalse(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Documents"));
        assertEquals("/Test", getPreferenceManager().getPreferenceArbitraryLogFolder());
        assertEquals("/Test", getPreferenceManager().getPreferenceArbitraryDownloadFolder());
        activityScenario.close();
    }

    @Test
    public void testAllowArbitraryFileLocationLogAndDownloadPermissionPresent() {
        ActivityScenario<?> activityScenario = launchSettingsInputActivity(SystemActivity.class, getBypassSystemSAFBundle());
        injectMocks(activityScenario);
        storagePermissionManager.setGrantedFolder("/Movies");
        storagePermissionManager.requestPersistentFolderPermission(null, "/Movies");
        injectArbitraryFolderLauncher(activityScenario, "/Test");
        storagePermissionManager.setGrantedFolder("/Test");
        storagePermissionManager.requestPersistentFolderPermission(null, "/Test");
        getPreferenceManager().setPreferenceArbitraryLogFolder("/Movies");
        getPreferenceManager().setPreferenceArbitraryDownloadFolder("/Movies");
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(scrollTo());
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(click());
        onView(withId(R.id.textview_activity_system_allow_arbitrary_file_location_on_off)).check(matches(withText("yes")));
        assertTrue(getPreferenceManager().getPreferenceAllowArbitraryFileLocation());
        assertTrue(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Movies"));
        assertFalse(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Test"));
        assertFalse(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Documents"));
        assertEquals("/Movies", getPreferenceManager().getPreferenceArbitraryLogFolder());
        assertEquals("/Movies", getPreferenceManager().getPreferenceArbitraryDownloadFolder());
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(scrollTo());
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(click());
        onView(withId(R.id.textview_activity_system_allow_arbitrary_file_location_on_off)).check(matches(withText("no")));
        assertFalse(getPreferenceManager().getPreferenceAllowArbitraryFileLocation());
        assertTrue(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Movies"));
        assertFalse(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Test"));
        assertFalse(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Documents"));
        assertEquals("/Movies", getPreferenceManager().getPreferenceArbitraryLogFolder());
        assertEquals("/Movies", getPreferenceManager().getPreferenceArbitraryDownloadFolder());
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(scrollTo());
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(click());
        onView(withId(R.id.textview_activity_system_allow_arbitrary_file_location_on_off)).check(matches(withText("yes")));
        assertTrue(getPreferenceManager().getPreferenceAllowArbitraryFileLocation());
        assertTrue(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Movies"));
        assertFalse(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Test"));
        assertFalse(storagePermissionManager.hasPersistentPermission(getActivity(activityScenario), "/Documents"));
        assertEquals("/Movies", getPreferenceManager().getPreferenceArbitraryLogFolder());
        assertEquals("/Movies", getPreferenceManager().getPreferenceArbitraryDownloadFolder());
        activityScenario.close();
    }

    @Test
    public void testAllowArbitraryFileLocationImportExportFolderText() {
        ActivityScenario<?> activityScenario = launchSettingsInputActivity(SystemActivity.class, getBypassSystemSAFBundle());
        injectMocks(activityScenario);
        injectArbitraryFolderLauncher(activityScenario, "/Test");
        storagePermissionManager.setGrantedFolder("/Test");
        onView(withId(R.id.textview_activity_system_config_import_folder)).check(matches(withText(endsWith("config"))));
        onView(withId(R.id.textview_activity_system_config_export_folder)).check(matches(withText(endsWith("config"))));
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(scrollTo());
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(click());
        onView(withId(R.id.textview_activity_system_allow_arbitrary_file_location_on_off)).check(matches(withText("yes")));
        assertTrue(getPreferenceManager().getPreferenceAllowArbitraryFileLocation());
        onView(withId(R.id.textview_activity_system_config_import_folder)).check(matches(withText("Choose file")));
        onView(withId(R.id.textview_activity_system_config_export_folder)).check(matches(withText("Choose file")));
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(scrollTo());
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(click());
        onView(withId(R.id.textview_activity_system_allow_arbitrary_file_location_on_off)).check(matches(withText("no")));
        assertFalse(getPreferenceManager().getPreferenceAllowArbitraryFileLocation());
        onView(withId(R.id.textview_activity_system_config_import_folder)).check(matches(withText(endsWith("config"))));
        onView(withId(R.id.textview_activity_system_config_export_folder)).check(matches(withText(endsWith("config"))));
        activityScenario.close();
    }

    @Test
    public void testAllowArbitraryFileLocationExportPermission() {
        ActivityScenario<?> activityScenario = launchSettingsInputActivity(SystemActivity.class, getBypassSystemSAFBundle());
        injectMocks(activityScenario);
        injectExportTask(activityScenario, getMockExportTask(activityScenario, true));
        injectArbitraryFolderLauncher(activityScenario, "/Test");
        storagePermissionManager.setGrantedFolder("/Test");
        injectExportFileLauncher(activityScenario, "/Test/test.json");
        storagePermissionManager.setGrantedCreateFile("/Test/test.json");
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(scrollTo());
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(click());
        onView(withId(R.id.textview_activity_system_allow_arbitrary_file_location_on_off)).check(matches(withText("yes")));
        onView(withId(R.id.textview_activity_system_config_export_folder)).perform(click());
        onView(withId(R.id.checkbox_dialog_export_encrypt_encrypt)).perform(click());
        onView(withId(R.id.imageview_dialog_export_encrypt_ok)).perform(click());
        assertTrue(storagePermissionManager.getCreateFilePermissions().contains("/Test/test.json"));
        assertEquals("/Test/test.json", getPreferenceManager().getPreferenceLastArbitraryExportFile());
        activityScenario.close();
    }

    @Test
    public void testAllowArbitraryFileLocationImportPermission() {
        ActivityScenario<?> activityScenario = launchSettingsInputActivity(SystemActivity.class, getBypassSystemSAFBundle());
        injectMocks(activityScenario);
        injectImportTask(activityScenario, getMockImportTask(activityScenario, true));
        injectArbitraryFolderLauncher(activityScenario, "/Test");
        storagePermissionManager.setGrantedFolder("/Test");
        injectImportFileLauncher(activityScenario, "/Test/test.json");
        storagePermissionManager.setGrantedOpenFile("/Test/test.json");
        getPreferenceManager().setPreferenceLastArbitraryExportFile("/Test/test.json");
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(scrollTo());
        onView(withId(R.id.switch_activity_system_allow_arbitrary_file_location)).perform(click());
        onView(withId(R.id.textview_activity_system_allow_arbitrary_file_location_on_off)).check(matches(withText("yes")));
        onView(withId(R.id.textview_activity_system_config_import_folder)).perform(click());
        onView(withId(R.id.textview_dialog_confirm_description)).check(matches(withText("The import will overwrite all existing network tasks, log entries and the configuration. This cannot be undone.")));
        onView(withId(R.id.imageview_dialog_confirm_ok)).perform(click());
        assertTrue(storagePermissionManager.getOpenFilePermissions().contains("/Test/test.json"));
        assertTrue(storagePermissionManager.getFolderPermissions().contains("/Test"));
        activityScenario.close();
    }

    @Test
    public void testAllowArbitraryFileLocationResetRevokePermission() {
        ActivityScenario<?> activityScenario = launchSettingsInputActivity(SystemActivity.class, getBypassSystemSAFBundle());
        injectMocks(activityScenario);
        injectArbitraryFolderLauncher(activityScenario, "/Test");
        storagePermissionManager.setGrantedFolder("/Test");
        injectImportFileLauncher(activityScenario, "/Test/test.json");
        storagePermissionManager.setGrantedOpenFile("/Test/test.json");
        getPreferenceManager().setPreferenceLastArbitraryExportFile("/Test/test.json");
        getPreferenceManager().setPreferenceLogFile(true);
